fix: switch icon align to text-bottom

--- a/src/components/Alert/Alert.scss
+++ b/src/components/Alert/Alert.scss
@@ -70,7 +70,7 @@ $block: '.#{variables.$ns}alert';
     }
 
     &__icon {
-        vertical-align: bottom;
+        vertical-align: text-bottom;
     }
 
     &__main {
